# chambers-insulin-pump

./: ISSUES_Chamber_Sentinel_Insulin_CGM.md  PRD_Chamber_Sentinel_Insulin_CGM.md  README.md  chamber_sentinel_insulin_cgm_v2.docx  chamber_sentinel_insulin_cgm_v3.md  pyproject.toml
chamber_sentinel_sim/: __init__.py  __main__.py  audit.py  clock.py  config.py  models.py  network.py
chamber_sentinel_sim/dashboard/: __init__.py  server.py
chamber_sentinel_sim/devices/: __init__.py  aid.py  cgm.py  pen.py  pump.py
chamber_sentinel_sim/phone/: __init__.py  app.py
chamber_sentinel_sim/portable_record/: __init__.py  vault.py
chamber_sentinel_sim/relay/: __init__.py  burn_executor.py  burn_scheduler.py  classifier.py  reports.py  worlds.py
chamber_sentinel_sim/scenarios/: SCN-001.yaml  SCN-002.yaml  SCN-003.yaml  SCN-004.yaml  SCN-005.yaml  SCN-006.yaml  SCN-009.yaml  SCN-010.yaml  SCN-015.yaml  __init__.py  assertions.py  runner.py
chamber_sentinel_sim/tests/: __init__.py  test_simulation.py
sim_output/SCN-001-happy-path/: config.json  dashboard.html  stats.json
sim_output/SCN-001-happy-path/assertions/: results.json
sim_output/SCN-003-consent-revocation/: config.json  stats.json
sim_output/SCN-003-consent-revocation/assertions/: results.json
sim_output/SCN-005-portable-record-loss/: config.json  stats.json
sim_output/SCN-006-offline-period/: config.json  stats.json
sim_output/SCN-009-emergency-burn/: config.json  stats.json
sim_output/SCN-010-multi-device/: config.json  stats.json
sim_output/SCN-015-multi-patient/: config.json  stats.json
(+25 files in other folders)
